[package]
name = "pinot"
version = "0.1.3"
authors = ["Chad Brokaw <cbrokaw@gmail.com>"]
edition = "2018"
description = "Fast, high-fidelity OpenType parser."
license = "MIT OR Apache-2.0"
keywords = ["font", "parse", "opentype"]
categories = ["graphics", "text-processing"]
repository = "https://github.com/dfrg/pinot"
homepage = "https://github.com/dfrg/pinot"
readme = "README.md"

[dependencies]
memmap = { version =  "0.7" }
